--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,12 +1,12 @@
 [tool.poetry]
-name = "emkademy"
+name = "cybulde"
 version = "0.1.0"
 description = ""
 authors = ["Kıvanç Yüksel <emkademy@gmail.com>"]
 readme = "README.md"
 
 [tool.poetry.dependencies]
-python = ">=3.10,<3.11"
+python = ">=3.10,<3.13"
 hydra-core = "~=1.3.2"
 pydantic = "~=1.10.7"
 pandas = "~=2.0"
@@ -16,12 +16,12 @@ fsspec = {version = "~=2023.5", extras=["gcs", "s3"]}
 gcsfs = "~=2023.5"
 google_cloud_secret_manager = "~=2.16"
 fastparquet = "~=2023.4"
-dvc = {version = "~=2.6", extras = ["gdrive", "gs", "s3", "dvc-s3"]}
+dvc = {version = "^3.5", extras = ["gdrive", "gs", "s3", "dvc-s3"]}
 dask = {version = "~2023.5", extras=["complete"]}
 distributed = "~=2023.5"
 dask-ml = "~=2023.3"
 dask-cloudprovider = {version = "2022.10", extras =["gcp","aws"]}
-
+awscli = "^1"
 
 [tool.poetry.group.dev.dependencies]
 pytest = "~=7.3"
