--- a/pyproject.toml
+++ b/pyproject.toml
@@ -12,11 +12,12 @@ pydantic = "~=1.10.7"
 pandas = "~=2.0"
 nltk = "~=3.8"
 symspellpy = "~=6.7"
-fsspec = {version = "~=2023.5", extras=["gcs", "s3"]}
-gcsfs = "~=2023.5"
+fsspec = {version = "^2024.9", extras=["gcs", "s3"]}
+gcsfs = "^2024.9"
 google_cloud_secret_manager = "~=2.16"
 fastparquet = "~=2023.4"
 dvc = {version = "^3.5", extras = ["gdrive", "gs", "s3", "dvc-s3"]}
+#pygit2 = "*"
 dask = {version = "~2023.5", extras=["complete"]}
 distributed = "~=2023.5"
 dask-ml = "~=2023.3"
