--- a/pyproject.toml
+++ b/pyproject.toml
@@ -22,6 +22,8 @@ distributed = "~=2023.5"
 dask-ml = "~=2023.3"
 dask-cloudprovider = {version = "2022.10", extras =["gcp","aws"]}
 awscli = "^1"
+boto3 = "*"
+jupyterlab = "*"
 
 [tool.poetry.group.dev.dependencies]
 pytest = "~=7.3"
