--- a/cybulde/configs/config.yaml
+++ b/cybulde/configs/config.yaml
@@ -1,5 +1,5 @@
 defaults:
-  - config_schema
+  - data_processing_config_schema
 
   - override hydra/job_logging: custom
   - override hydra/hydra_logging: disabled
